--- a/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
+++ b/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
@@ -1,3 +1,10 @@
+  
+  * added a meq.solvable_list() function to create lists of solvable
+    parms (suitable for assigning to solver's defrec.solvable)
+
+  * added a meq.reclist() function to meqtypes, to make lists of records.
+    meq.init/addcmdlist() now uses it
+
   * renamed config_groups into node_groups
     (meq.node() has a "groups" argument now)
     Affected: meqtypes.g, solvable parms
@@ -16,7 +23,7 @@
       rec.parm_group        parm group to use ("Parm" by default)
       rec.solvable          solvable parms (used to be rec.solvable_parm)
       
-  * renamed inis/addstatlist to init/addcmdlist in meqtypes.g
+  * renamed inis/addstatelist to init/addcmdlist in meqtypes.g
 
 Check in of 18/02/04:
 
