--- a/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
+++ b/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
@@ -1,6 +1,12 @@
+  * a parm now has a solvable polc and a predict polc, so it can answer
+    off-the-wall predict requests w/o disrupting the solve
+      
+  * added a Clear.Polcs command to MeqParm; renamed Save.Polc to
+    Save.Polcs
   
   * added a meq.solvable_list() function to create lists of solvable
-    parms (suitable for assigning to solver's defrec.solvable)
+    parms (suitable for assigning to solver's defrec.solvable), see 
+    MeqServer/test/meqtest.g
 
   * added a meq.reclist() function to meqtypes, to make lists of records.
     meq.init/addcmdlist() now uses it
@@ -23,7 +29,7 @@
       rec.parm_group        parm group to use ("Parm" by default)
       rec.solvable          solvable parms (used to be rec.solvable_parm)
       
-  * renamed inis/addstatelist to init/addcmdlist in meqtypes.g
+  * renamed ini/addstatelist to init/addcmdlist in meqtypes.g
 
 Check in of 18/02/04:
 
