--- a/CEP/CPA/AppAgent/MeqServer/TODO
+++ b/CEP/CPA/AppAgent/MeqServer/TODO
@@ -1,18 +1,17 @@
-  for now: MergeFlags; test the flagging stuff
-
 MEQ in general:
 
   * Update documentation! (never goes away, does it?)
   
-  * look through VellSet and Result classes, check for privatize-on-write
-    where needed.
-
   * Specify child labels in node constructor; check them in init().
     Process named children properly.
     Re-opening: we want optional children, too (see, e.g., FlagSubtract)
     01/01/04: done, need to test w/glish (glish not working on my laptop)
     16/01/04: tested with default tests; now need to make some nodes
               with child labels
+              
+        + look through VellSet and Result classes, check for privatize-on-write
+          where needed.
+          23/03/04: cleaned up
               
         + add shape attribute to VellSet, ensure that Vells, etc. have the same 
           shape (or are scalar)
@@ -79,8 +78,8 @@ Solver:
   * BUG: JEN has a problem after Clear.Polcs: execute returns a fail saying
     "no cells in Meq::Request"
     
-  * Apply a gain factor to incremental value updates (perhaps both on the 
-    solver side, and on the parm side?)
+      [ Apply a gain factor to incremental value updates (perhaps both on the 
+        solver side, and on the parm side?) ]
     
         + Implement request ID hierarchy
           28/01/04: done
@@ -92,10 +91,15 @@ Solver:
           
 
 Flagging:
-
-  * implement ZeroFlagger: flag where value <OP> 0 (OP is ==,!=,<,>,<=,>=)
   
-  * implement MergeFlags: merge flags of all children
+      + add generic flag_mask functionality (a-la MergeFlags) to Function
+        23/03/04: done
+
+      + implement ZeroFlagger: flag where value <OP> 0 (OP is ==,!=,<,>,<=,>=)
+        23/03/04: done
+
+      + implement MergeFlags: merge flags of all children
+        23/03/04: done
 
 
 Sink/Spigot:
@@ -103,7 +107,8 @@ Sink/Spigot:
   * improve Spigot flag reading options: e.g., apply mask to input, and
     if true, place result into 1 bit of the output
   
-  * handle writing flags in Sink
+  * handle writing flags in Sink; check if they're written correctly by
+    MSOutput
   
         + handle flags in Spigot 
           19/03/04: done
@@ -159,6 +164,8 @@ Request:
           file.
 
 Vells and VellSets and Results:
+
+  * think of extending the Vells amth functions: median, etc.
 
     - double-differencing?
       02/02/04 done for VellSets, needs real testing
